# OpenGLRenderingEngineLibrary

./: CMakeLists.txt  Readme.md
Extras/: Notes
OpenGLRenderEngine/: CMakeCache.txt  Makefile  OpenGLRenderEngine.ilk  OpenGLRenderEngine.lib  build 2.ninja  build.ninja
OpenGLRenderEngine/.cmake/api/v1/reply/: codemodel-v2-1a421f8c22c4c329c095.json  index-2025-04-29T01-34-19-0120.json  target-OpenGLRenderEngine-Debug-35dd967287ba48b0b26b.json
OpenGLRenderEngine/shaders/: phong.frag  phong.vert
shaders/: phong.frag
src/: library.cpp  library.h  main.cpp
src/Basic/: GameObject.cpp  GameObject.h  Light.cpp  Light.h
src/DebugLog/: EngineLog.cpp  EngineLog.h
src/Importer/: MeshImporter.cpp  MeshImporter.h  TextureImporter.cpp  TextureImporter.h
src/Matrix/: Camera.cpp  Camera.h  Transform.cpp  Transform.h
src/MeshHandling/: Material.cpp  Material.h  Mesh.h  Texture.h  Vertex.h
src/Render/: Frame.cpp  Frame.h  Renderer.cpp  Renderer.h  ShaderCache.cpp  ShaderCache.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderErrorHandler.cpp  ShaderErrorHandler.h
src/Utils/: GlobalConstants.h  ShaderTypes.h  Vector3.h
